// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TogglePayoutPending should render correctly 1`] = `
<RNGestureHandlerButton
  collapsable={false}
  delayLongPress={600}
  enabled={true}
  exclusive={true}
  handlerTag={1}
  handlerType="NativeViewGestureHandler"
  onGestureEvent={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onHandlerStateChange={[Function]}
  rippleColor={0}
  touchSoundDisabled={false}
>
  <View
    accessible={true}
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F56522",
        "borderColor": "#F56522",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "opacity": 1,
        "paddingLeft": 8,
        "paddingRight": 8,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#FFFCFA",
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 14,
              "letterSpacing": 0.5,
              "lineHeight": 24,
              "textTransform": "uppercase",
            },
            false,
          ],
          false,
        ]
      }
    >
      payout pending
    </Text>
    <test-file-stub
      fill="#FFFCFA"
      style={
        [
          {
            "height": 24,
            "width": 24,
          },
          {
            "height": 12,
            "marginLeft": 4,
            "marginTop": -1,
            "width": 12,
          },
        ]
      }
    />
  </View>
</RNGestureHandlerButton>
`;

exports[`TogglePayoutPending should render correctly when showBatchInfo is true 1`] = `
<RNGestureHandlerButton
  collapsable={false}
  delayLongPress={600}
  enabled={true}
  exclusive={true}
  handlerTag={3}
  handlerType="NativeViewGestureHandler"
  onGestureEvent={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onHandlerStateChange={[Function]}
  rippleColor={0}
  touchSoundDisabled={false}
>
  <View
    accessible={true}
    collapsable={false}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F56522",
        "borderColor": "#F56522",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "center",
        "opacity": 1,
        "paddingLeft": 8,
        "paddingRight": 8,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#FFFCFA",
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 14,
              "letterSpacing": 0.5,
              "lineHeight": 24,
              "textTransform": "uppercase",
            },
            false,
          ],
          false,
        ]
      }
    >
      trade details
    </Text>
    <test-file-stub
      fill="#FFFCFA"
      style={
        [
          {
            "height": 24,
            "width": 24,
          },
          {
            "height": 12,
            "marginLeft": 4,
            "marginTop": -1,
            "width": 12,
          },
        ]
      }
    />
  </View>
</RNGestureHandlerButton>
`;
